[package]
name = "co-orm"
version = "0.3.0"
edition = "2021"
authors = ["plucky"]
description = "Implement Create, Read, Update, and Delete (CRUD) methods base on sqlx."

readme = "readme.md"
keywords = [
    "orm",
    "sqlx",
    "crud",
]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/co-orm"
documentation = "https://docs.rs/crate/co-orm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
co-orm-macros = {version ="0.3.0", optional = true}

# replace latest version with your local version
[patch.crates-io]
co-orm-macros = {path = "co-orm-macros"}


[dev-dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros"] }


[features]
default = ["mysql"]
mysql=["co-orm-macros/mysql"]
postgres=["co-orm-macros/postgres"]
sqlite=["co-orm-macros/sqlite"]
mssql=["co-orm-macros/mssql"]


[workspace]
members = [
"co-orm-macros",

]
