[package]
name = "co-orm-macros"
version = "0.2.8"
edition = "2021"
authors = ["plucky"]
description = "Derive macro implement Create, Read, Update, and Delete (CRUD) methods base on sqlx."
#documentation = "https://docs.rs/co_orm/"
readme = "../readme.md"
keywords = [
    "orm",
    "sqlx",
    "crud",
]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/co-orm"

[dependencies]
quote = "1.0"
syn = {version = "1", features = ["extra-traits",]}
Inflector = "0"

[lib]
proc-macro = true

[features]
default = ["mysql"]
mysql=[]
postgres=[]
sqlite=[]
mssql=[]
