[package]
name = "co-orm-macros"
version = "0.3.11"
edition = "2021"
authors = ["plucky"]
description = "Derive macro for co-orm"

readme = "../readme.md"
keywords = [
    "orm",
    "sqlx",
    "crud",
    "sql",
]
categories = ["database"]
license = "MIT"
repository = "https://github.com/cody-why/co-orm"
documentation = "https://docs.rs/crate/co-orm/"

[dependencies]
quote = "1.0"
syn = {version = "2", features = ["extra-traits",]}
Inflector = "0"

[lib]
proc-macro = true

[features]
default = []
mysql=[]
postgres=[]
sqlite=[]
mssql=[]
